--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<h1 id="contact-us">房间信息</h1>
 	<script src="script/three.min.js"></script>
 	<script src="script/GLTFLoader.js"></script>
+	<script src="OrbitControls.js"></script>
 	<script src="script/main.js"></script>
 </body>
 </html>
