--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="script/three.min.js"></script>
 	<script src="script/GLTFLoader.js"></script>
 	<script src="OrbitControls.js"></script>
+	<script src="script/OrbitControls.js"></script>
 	<script src="script/main.js"></script>
 </body>
 </html>
